src/styles/PluginSettings.module.scss
@import './abstracts/_media.scss';
// STYLE FOR PLUGIN SETTINGS COMPONENT

.settings {
  height: 100%;
  width: 25vw;
  box-shadow: 0 2px 10px 3px rgba(0, 0, 0, 0.2);

  @include mobile {
    border-radius: 0px 10px 0 0;
    width: 100%;
  }

  &_dropdowns {
    padding-bottom: 20px;
    border-bottom: 1px solid #e2e2e2;
  }
}

